Color Contrast issue

--- a/techdegree/proj8/css/survey.css
+++ b/techdegree/proj8/css/survey.css
@@ -20,6 +20,7 @@
 *******************/
 legend {
 	margin-bottom: 7px;
+	color: #f2f2f2;
 }
 .legend {
 	position: absolute;
